[project]
name = "repl-nix-financialstatementconverter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.18",
    "llama-index-core>=0.11.22",
    "llama-index-llms-openai>=0.2.16",
    "llama-index>=0.11.22",
    "openai>=1.54.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "plotly>=5.24.1",
    "reportlab>=4.2.5",
    "requests",
    "schedule>=1.2.2",
    "streamlit>=1.40.0",
    "trafilatura>=1.12.2",
    "xlrd",
    "xlsxwriter",
]
